@@ -14,6 +14,7 @@
 
 - improved: `filename` in modificators (now it contains relative paths)
 - improved: performance of `U.request()` (around +30%)
+- improved: performance of `U.download()` (around +30%)
 - improved: performance of `RESTBuilder`
 
 - fixed: phone validation
